--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,7 @@ html,body,#root{
   width: 50px;
   border-bottom: solid 2px #000000;
   text-align: center;
+  outline: none;
 }
 #otp{
   text-align: center;
