--- a/src/App.css
+++ b/src/App.css
@@ -388,7 +388,7 @@ h1{
 }
 .photoSection{
   background-color: #ffff; 
-  height: 100%;
+  /* height: 100%; */
   margin:0 auto;
   width: 100%;
   max-width: 700px;
