--- a/src/App.css
+++ b/src/App.css
@@ -118,10 +118,6 @@ html,body,#root{
     gap: 10px;
     
 }
-.postField{
-  max-height: 500px;
-  overflow: auto;
-}
 
 .formField{
   display: grid;
@@ -153,70 +149,7 @@ html,body,#root{
   height: 39px;
 
 }
-.otpSection{
-  background-color: #E1D5D5;
-}
-.vectorSection{
-  background-color: #ffff;
-}
-.otpDetailsSection {
-    margin: auto; 
-    max-width: 50%;
-    display: grid;
-    gap: 15px;
-    margin-top: 40%;
-    padding-left: 25px;
-}
-.otpInput{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  color: #fff;
-  gap: 10px;
 
-}
-.underline{
-  background-color: #E1D5D5;
-  border: none;
-  width: 50px;
-  border-bottom: solid 2px #000000;
-  text-align: center;
-  outline: none;
-}
-
-.underline:focus{
-  border-bottom: solid 2px #f45757;
-}
-#otp{
-  text-align: center;
-  color: #000000;
-  font-size: 25px;
-  margin-bottom: 10px;
-}
-.messageSection{
-  color: #000000;
-  margin-left: auto;
-  margin-right: 0px;
-}
-.nextButton img{
-  width: 55px;
-}
-.nextButton{
-  margin: auto;
-}
-.vectorImage img{
-  display: grid;
-  padding-left: 75px;
-}
-.vectorSection{
-  display: grid;
-  place-items: center;
-  align-content: center;
-  gap: 32px;
-}
-#three{
-  color: black;
-  font-size: 20px;
-}
 .logoSection img{
   width: 65px;
 }
@@ -392,7 +325,7 @@ h1{
 }
 .photoSection{
   background-color: #ffff; 
-  /* height: 100%; */
+  height: 100%;
   margin:0 auto;
   width: 100%;
   max-width: 700px;
@@ -410,7 +343,7 @@ h1{
 }
 .sectionDivider{
   border-left: solid black;
-  /* height: 530px; */
+  height: 530px;
 
 }
 #onlineHeading{
