--- a/src/components/Save.css
+++ b/src/components/Save.css
@@ -32,11 +32,13 @@
   .savePost-body{
     display: grid;
     grid-template-rows:1fr 1fr ;
+    gap: 20px;
   }
 
   .saveUpper-part{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
   }
 
   .saveLower-part{
