--- a/src/components/Save.css
+++ b/src/components/Save.css
@@ -32,18 +32,21 @@
   .savePost-body{
     display: grid;
     grid-template-rows:1fr 1fr ;
-    gap: 20px;
+    gap: 35px;
+    padding: 20px;
+    justify-items: center;
   }
 
   .saveUpper-part{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 30px;
   }
 
   .saveLower-part{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
   }
 
   .postImage{
