--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -32,7 +32,7 @@
     border-radius: 7px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border: none;
-    width: 300px;
+    width: 100%;
     height: 30px;
     font-size: 16px;
   }
@@ -74,7 +74,7 @@
   .signUpInput
   {
       display: grid;
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 1fr;
       gap: 10px;
       
   }
@@ -85,6 +85,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     height: 30px;
     font-size: 16px;
+    width: 100%;
     border: solid 2px #000000;
   }
   
