--- a/src/components/Personalchat.css
+++ b/src/components/Personalchat.css
@@ -34,7 +34,7 @@
   }
   .Personal-chat-sender{
     background-color: #C97D7D;
-    width: 227px;
+    max-width: 227px;
     height: 90px;
     border-radius: 40px;
     margin:0;
@@ -43,12 +43,12 @@
   }
   .personal-chat-receiver{
     background-color: #E3BDBD;
-    width: 520px;
     height: 92px;
     border-radius: 40px;
     margin: 0;
     margin-left: auto;
     position: relative;
+    max-width: 520px;
   }
   .senderTime{
     position: absolute;
@@ -77,6 +77,7 @@
   }
   #sendButton{
     position: absolute;
-    right: 70px;        /* ask about position: relative; */
+    right: 20px;        /* ask about position: relative; */
     bottom: 20px;
   }
+  
