--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -52,7 +52,7 @@
     gap: 10px;
     height: 100%;
     overflow: auto;
-    padding: 0px 0px 0px 70px;
+    padding: 20px;
   }
   .chatBody{
     display: grid;
