--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -3,7 +3,7 @@
     height: 100%;
   }
   .postMain-body{
-    padding: 60px;
+    padding: 30px;
     height: 100%;
   }
   .post-header{
@@ -11,19 +11,18 @@
     gap: 50px;
   }
   .postBody-section{
-    padding: 70px;
+    padding: 20px;
     display: flex;
-    gap: 70px;
+    gap: 40px;
     align-items: center;
   }
   .postPhoto-selection{
     height: 250px;
-    width:380px;
+    width:100%;
     background-color: #ffff;
   }
   .postingCaption{
     height: 100px;
-    width: 400px;
     background-color: #CAB0B0;
     border-radius: 30px;
     padding: 20px;
