--- a/src/components/StoryViews.css
+++ b/src/components/StoryViews.css
@@ -8,7 +8,7 @@
   }
   .storyView-Header{
     display: flex;
-    gap: 1000px;
+    justify-content: space-between;
     padding-bottom: 15px;
   }
   .viewHeader-First{
@@ -30,4 +30,7 @@
   .storyView-body{
     display: grid;
     gap: 20px;
+  }
+  .viewHeader-Second img{
+width: 100%;
   }
