--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -27,6 +27,7 @@
     border-radius: 30px;
     padding: 20px;
     margin-left: 70px;
+    max-width: 500px;
   }
   .postFrom-section{
     margin-left: 70px;
