--- a/src/components/Settings.css
+++ b/src/components/Settings.css
@@ -13,7 +13,7 @@
   .settings-property{
     background-color: #E3BFBF;
     /* width: 1188px; */
-    height: 85px;
+    /* height: 85px; */
     border-radius: 30px;
     padding: 30px;
   
