--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -52,7 +52,7 @@ h2{
     
 .bottom-part{
     display: grid;
-    grid-template-columns: 1fr 4fr .5fr;
+    grid-template-columns: auto 1fr auto;
     gap: 25px;
 }
 
@@ -61,8 +61,7 @@ h2{
     background-color: #ffff;
     height: 50px;
     width: 50px;
-    border-radius: 50%;
-    margin-left: 50px;
+    border-radius: 50%
 
 }
 
