--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -9,7 +9,7 @@ html,body,#root{
 
 
 .main-container {
-    height: 100%;
+    min-height: 100%;
     /* display: grid; */
     grid-template-rows: auto auto;
     background-color: #E1D5D5;
