--- a/src/components/home.css
+++ b/src/components/home.css
@@ -21,6 +21,7 @@ html,body,#root{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     text-align: center;
+    gap: 10px;
   }
   .storyIcon{
     background-color: #787b81;
@@ -95,6 +96,9 @@ html,body,#root{
     border-radius: 20px;
   
   }
+  .postLike{
+    cursor: pointer;
+  }
   .postReaction{
     display: grid;
     grid-template-columns: auto auto 1fr;
@@ -104,6 +108,9 @@ html,body,#root{
   .postReaction-details{
     padding-left: 50px;
     font-weight: bold;
+  }
+  .footerImage{
+    cursor: pointer;
   }
   @media screen and (max-width: 890px) {
     .homeContainer{
@@ -115,4 +122,5 @@ html,body,#root{
     .onlineSection{
         display: none;
     }
+    
   }
