--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -15,6 +15,9 @@
     padding-right: 10px;
     display: grid;
   }
+form{
+  display: grid;
+}
   .signUpContainer{
     background-color: #F9FFFF;
   }
