--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -2,6 +2,8 @@
     background-color: #E1D5D5;
     min-height: 100%;
     padding: 15px;
+    display: grid;
+    align-items: center;
   }
   .postMain-body{
     height: 100%;
@@ -16,19 +18,20 @@
     gap: 40px;
     align-items: center;
   }
-  .postPhoto-selection{
+  /* .postPhoto-selection{
     width:100%;
     max-width: 500px;
     background-color: #ffff;
     aspect-ratio: 2;
-  }
+  } */
   .postingCaption{
     height: 100px;
     border: none;
     background-color: #CAB0B0;
-    border-radius: 30px;
-    padding: 20px;
-    max-width: 500px;
+    border-radius: 25px;
+    padding: 30px;
+    max-width: 800px;
+    font-size: medium;
   }
   .postFrom-section{
     font-size: large;
@@ -40,7 +43,7 @@
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
-    gap: 20px;
+    gap: 25px;
     padding-left: 10px;
   }
   .postedPhoto{
@@ -63,7 +66,7 @@
     font-weight: bold;
   }
   .post-button img{
-    width: 100%;
+    width: 30%;
   }
   .post-footer{
     padding: 20px;
